--- a/talon_vmp.html
+++ b/talon_vmp.html
@@ -10,7 +10,7 @@
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="utf-8">
-  <title>Талон на оказание1 ВМП</title>
+  <title>Талон на оказание ВМП</title>
   <link rel="icon" type="image/x-icon" href="img/logo-langing.ico">
 </head>
 
