--- a/vid_mo_vmp.html
+++ b/vid_mo_vmp.html
@@ -201,7 +201,7 @@
             </div>
             <div class="row">
                 <div class="col s12">
-                    <a class="waves-effect waves-light btn-small"><i class="material-icons left">refresh</i>Сбросить</a>
+                    <a class="waves-effect waves-light btn-small red"><i class="material-icons left">refresh</i>Сбросить</a>
                     <a class="waves-effect waves-light btn-small"><i class="material-icons left">done</i>На утверждение</a>
                     <a class="waves-effect waves-light btn-small"><i class="material-icons left">edit</i>Редактировать</a>
                     <a class="waves-effect waves-light btn-small"><i class="material-icons left">thumb_up</i>Утвердить</a>
