--- a/vid_mo_vmp.html
+++ b/vid_mo_vmp.html
@@ -199,7 +199,7 @@
             </div>
             <div class="row">
                 <div class="col s12">
-                    <a class="waves-effect waves-light btn-small"><i class="material-icons left">thumb_up</i>Обновить</a>
+                    <a class="waves-effect waves-light btn-small">Обновить</a>
                 </div>
             </div>
             <div class="row">
