поменял иконки и добавил заголовки

--- a/vid_mo_vmp.html
+++ b/vid_mo_vmp.html
@@ -20,6 +20,8 @@
     <!-- Окно причины -->
     <div id="reason" class="modal">
         <div class="modal-content">
+            <h6>Причина отказа</h6>
+            <hr>
             <div class="row">
                 <div class="input-field col s12">
                     <textarea id="textarea1" class="materialize-textarea"></textarea>
@@ -36,6 +38,8 @@
     <!-- Окно сообщения -->
     <div id="message" class="modal">
         <div class="modal-content">
+            <h6>Причина отказа</h6>
+            <hr>
             Отказано из-за несоответствия внесенных сведений и приложенной лицензии.
         </div>
         <div class="modal-footer">
@@ -46,6 +50,8 @@
     <!-- Окно добавления лицензии -->
     <div id="add_lisence" class="modal">
         <div class="modal-content">
+            <h6>Добавление лицензии</h6>
+            <hr>
             <div class="row">
                 <div class="input-field col l4 s12">
                     <!-- Использовать сатурн -->
@@ -75,6 +81,8 @@
     <!-- Окно удаления лицензии -->
     <div id="del_lisence" class="modal">
         <div class="modal-content">
+            <h6>Предупреждение</h6>
+            <hr>
             Вы уверены, что хотите удалить лицензию?
         </div>
         <div class="modal-footer">
@@ -234,7 +242,7 @@
             <div class="row">
                 <div class="col s12 input-field">
                     <span class="left" style="padding-right: 10px;">Доступный вид ВМП</span>
-                    <a href="#announcement" class="tooltipped left" data-tooltip="Строка поиска позволяет отфильтровать иерархический список ниже до одной искомой записи"><i class="material-icons">announcement</i></a>
+                    <a href="#announcement" class="tooltipped left" data-tooltip="Строка поиска позволяет отфильтровать иерархический список ниже до одной искомой записи"><i class="material-icons">info_outline</i></a>
                     <input placeholder="Начните вводить наименование" id="first_name" type="text" class="validate">
                 </div>
             </div>
