--- a/vid_mo_vmp.html
+++ b/vid_mo_vmp.html
@@ -10,7 +10,7 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8">
-    <title>Доступные виды ВМП</title>
+    <title>Доступные профили и виды ВМП</title>
     <link rel="stylesheet" href="css/vmp_talon.css?v=1.0">
     <link rel="stylesheet" href="css/search.css">
     <link rel="icon" type="image/x-icon" href="img/logo-langing.ico">
@@ -104,7 +104,7 @@
     <!-- vvod_bar -->
     <ul id='vvod' class='dropdown-content'>
         <li><a href="#!">Должностные лица и контактная информация</a></li>
-        <li><a href="#!">Доступные виды ВМП</a></li>
+        <li><a href="#!">Доступные профили и виды ВМП</a></li>
         <li><a href="#!">Талоны за прошлый год</a></li>
         <li class="divider" tabindex="-1"></li>
         <li><a href="#!">Клиническая апробация</a></li>
@@ -113,7 +113,7 @@
     </ul>
     <ul id='vvod-mobile' class='dropdown-content'>
         <li><a href="#!">ДЛ и контактная информация</a></li>
-        <li><a href="#!">Доступные виды ВМП</a></li>
+        <li><a href="#!">Доступные профили и виды ВМП</a></li>
         <li><a href="#!">Талоны за прошлый год</a></li>
         <li class="divider" tabindex="-1"></li>
         <li><a href="#!">Клиническая апробация</a></li>
@@ -172,7 +172,7 @@
 
     <div class="content row mobile_margin">
         <div class="z-depth-2 vmp_content col l11 s12 push-l0">
-            <h5 style="text-align: center;">Доступные виды ВМП</h5>
+            <h5 style="text-align: center;">Доступные профили и виды ВМП</h5>
             <div class="row" style="margin-top: 25px">
                 <div class="input-field col s12 l9">
                     <select>
