Поправил модалку добавления лицензии

--- a/vid_mo_vmp.html
+++ b/vid_mo_vmp.html
@@ -63,7 +63,7 @@
                 <form action="#">
                     <div class="file-field input-field">
                         <div class="btn">
-                            <span>File</span>
+                            <span>Выбрать</span>
                             <input type="file" multiple>
                         </div>
                         <div class="file-path-wrapper">
@@ -74,7 +74,8 @@
             </div>
         </div>
         <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat green text-primary">OK</a>
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat red text-primary">Отмена</a>
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat green text-primary">Добавить</a>
         </div>
     </div>
 
