Добавил кнопку "Вернуть талон" на Этапе 6

--- a/talon_vmp.html
+++ b/talon_vmp.html
@@ -154,6 +154,7 @@
     </div>
 </div>
 
+
 <!-- Окно создания метки -->
 <div id="metka" class="modal">
   <div class="modal-content">
@@ -1030,6 +1031,7 @@
                     </div>
                     <div class="row">
                         <a onclick="M.toast({html: 'Этап сохранён'})" class="waves-effect waves-light btn-small green">Сохранить</a>
+                        <a class="waves-effect waves-light btn-small green">Вернуть талон</a>
                         <a href="#export" class="modal-trigger waves-effect waves-light btn-small green">Экспорт</a>
                         <a href="#addfile" class="modal-trigger waves-effect waves-light btn-small green">Прикрепить документ</a>
                     </div>
