Добавил дату создания талона в "История изменений"

--- a/talon_vmp.html
+++ b/talon_vmp.html
@@ -278,6 +278,7 @@
                     <tr>
                         <th>Номер талона</th>
                         <th>Дата переноса</th>
+                        <th>Дата создания</th>
                     </tr>
                 </thead>
         
@@ -285,6 +286,7 @@
                     <tr>
                         <td>45.0000.00117.185</td>
                         <td>15.01.2019</td>
+                        <td>02.07.2018</td>
                     </tr>
                 </tbody>
             </table>
